k8s/backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinel
  labels:
    name: sentinel
