k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: sentinel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nginx:stable
          ports:
            - containerPort: 8080
          command: ["sh","-c"]
          args:
            - echo 'Hello from backend' > /usr/share/nginx/html/index.html &&
              sed -i 's/listen.*/listen 8080;/' /etc/nginx/conf.d/default.conf &&
              nginx -g 'daemon off;'
