k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: backend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internal
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Environment=backend"
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
